Improving code in com.afowd.constants.Const